tests/snapshots/run_wpt_conformance__litert_clamp_float16_3D_tensor_specified_negative_options_minValue_and_positive_options_maxValue.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
clamp.https.any.js clamp float16 3D tensor specified negative options.minValue and positive options.maxValue, litert
 clamp :: clamp float16 3D tensor specified negative options.minValue and positive options.maxValue: index 0: actual=0 expected=-3 ulp=16896 tolerance=4
  inputs: clampInput: [-9.8203125, -6.0234375, -4.07421875, -6.57421875, -7.75390625, 9.5234375, 3.728515625, 6.48046875, -1.537109375, -7.34375, 7.87890625, -2.056640625, 6.34375, 5.52734375, 0.84326171875, -8.203125, -7.78515625, 9.28125, -2.3125, 9.546875, 5.7890625, 5.55078125, 7.41015625, -2.123046875]
  expected clampOutput: [-3, -3, -3, -3, -3, 4, 3.7285156, 4, -1.5371094, -3 ...] (len=24)
  actual clampOutput: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ...] (len=24)
  expected clampOutput full nd:
[-3, -3, -3, -3, -3, 4, 3.7285156, 4, -1.5371094, -3, ...] (len=24, shape=[2, 6, 2])
  actual clampOutput full nd:
[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...] (len=24, shape=[2, 6, 2])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    clampInput: f16[2, 6, 2];
  }

  nodes {
    [clampOutput] = clamp(clampInput, label="", maxValue=4, minValue=-3);
  }

  outputs { clampOutput; }
}
